# practicum-city-air-tracker

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: air-ticket-check.yml  dashboard-azure-deploy.yml  python-quality-gates.yml
configs/: cities.csv
configs/env/: azure.template  local.template
docs/: City_Air_Tracker_OpenWeather_Instructions v1.docx  City_Air_Tracker_OpenWeather_POC_Plan v1.docx  README.md  application_architecture_guide.md  architecture.md  data_dictionary.md  data_flow_diagram.md  docker_compose_azure_local_dev.md  github_feature_branch_pr_guide.md  github_quality_gates_setup.md  openweather-air-pollution.postman_collection.json  openweather_environmental_api_fields_reference.md  pr_review_best_practices.md  react_dashboard_architecture_guide.md  what_is_a_data_pipeline.md
docs/architecture/: AIR-015.1-transform-postgresql-retrieval-contract.md  architecture.md  data_flow_diagram.md  function_call_flows.md  postgresql_schema_design.md  runtime_architecture_guide.md
docs/collaboration/: github_feature_branch_pr_guide.md  pr_review_best_practices.md  what_is_a_data_pipeline.md
docs/reference/: data_dictionary.md
docs/setup/: azure_blob_storage_configuration.md  azure_postgresql_configuration.md  dashboard_azure_deployment.md  docker_and_compose_walkthrough.md  environment_profiles_guide.md  (+6 more)
migrations/: env.py
pipeline/: __init__.py
scripts/: generate_env_profiles.sh  generate_runtime_architecture_pdf.py  setup_venv.ps1  setup_venv.sh
(+68 files in other folders)
